# playwright-search-mcp

./: .gitignore  README.md  README.zh-CN.md  browser-state-fingerprint.json  browser-state.json  google-debug.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
docs/: architecture-design.md  extractor-development-process-refined.md
src/: index.ts  logger.ts  mcp-server.ts  search-refactored.ts  search.ts  types.ts
src/engine-config/: baidu.json  common.json  google.json  xhs.json  zhihu.json
src/engines/: baidu-engine.ts  base.ts  browser-manager.ts  chromium-manager.ts  config-loader.ts  configs.json  engine-configs.ts  engine-factory.ts  google-engine.ts  universal-parser.ts  xiaohongshu-engine.ts  zhihu-engine.ts
src/types/: playwright-extra.d.ts
src_py/playwright_search/: browser_manager.py  logger.py  main.py  types.py
src_py/playwright_search/engines/: __init__.py  base.py  factory.py  google.py
